--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,10 @@
 			<name>m2-dv8tion</name>
 			<url>https://m2.dv8tion.net/releases</url>
 		</repository>
+		<repository>
+		  <id>jitpack.io</id>
+		  <url>https://jitpack.io</url>
+		</repository>
 	</repositories>
 
 	<dependencies>
@@ -64,6 +68,11 @@
 			<groupId>com.sedmelluq</groupId>
 			<artifactId>lavaplayer</artifactId>
 			<version>1.3.77</version>
+		</dependency>
+		<dependency>
+		  <groupId>com.github.aikaterna</groupId>
+		  <artifactId>lavaplayer-natives</artifactId>
+		  <version>original-0051ce9c66-1</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
